Drop calls to g_type_init()/g_thread_init()

Both are deprecated and no longer necessary.

https://bugzilla.gnome.org/show_bug.cgi?id=689569