gui/simple-greeter/greeter-main.c
@@ -273,8 +273,6 @@ main (int argc, char *argv[])
 
         setlocale (LC_ALL, "");
 
-        g_type_init ();
-
         gdm_profile_start ("Initializing settings client");
         if (! gdm_settings_client_init (DATADIR "/gdm/gdm.schemas", "/")) {
                 g_critical ("Unable to initialize settings client");
